--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -329,6 +329,11 @@
                     <label for="" class="required" >{{form.avalista.label}} </label>        
                     {% render_field form.avalista class="form-control"  %}
                 </div>
+            </div><div class="col-sm-5">                    
+                <div class="form-group" >                
+                    <label for="" class="required" >{{form.cliente_copia.label}} </label>        
+                    {% render_field form.cliente_copia class="form-control"  %}
+                </div>
             </div>
             <br>
             <div class="col-sm-12">
