--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -74,8 +74,6 @@
     
     /* <button class="print">Print</button> */
     
-    
-    
 </style>
 </head>
 <body>
@@ -90,26 +88,28 @@
         </p>
         <p class="desloca2">
             2/2 
-        </p>
-
-    
+        </p>    
 <script>
 
 window.onload = function imprimir(){
-
-    //VARIÁVEIS DO FUNCIONÁRIO
-    //var funcionario = "{{object.funcionario}}"
     
     //VARIÁVEIS DA DATA DO EMPRESTIMO
     var contador_meses = 0
     var contador_anos  = 0
-    var dataEmprestimo = "{{ object.data_emprestimo}}"		
+    var meses = new Array("01", "02", "03", "04", "05", "06" ,"07", "08", "09", "10", "11", "12")
+    var dataEmprestimo = "{{ object.data_emprestimo}}"
+    var dt = new Date(dataEmprestimo)    
+   		
     var dia
     var mes
     var ano
     var aux_dia = {{object.data_emprestimo.day}}
     var aux_mes = {{object.data_emprestimo.month}}
     var aux_ano = {{object.data_emprestimo.year}}
+    
+    dia  = aux_dia
+    mes  = aux_mes+contador_meses
+    ano  = aux_ano
 
     //VARIÁVEIS DO EMPRESTIMO
     var aux_qtd_parccela = {{object.qtd_parcelas}}
@@ -151,9 +151,7 @@ window.onload = function imprimir(){
     var avalista = "{{object.cliente.avalista.avalista}}"
     var cpf_avalista = "{{object.cliente.avalista.cpf_avalista}}"
 
-    dia  = aux_dia
-    mes  = aux_mes+contador_meses
-    ano  = aux_ano
+    
    
     contrato.innerHTML +=
     `
@@ -217,7 +215,7 @@ window.onload = function imprimir(){
                     ${contador_parcela}/${aux_qtd_parccela}
                 </td>
                 <td width="33%">
-                    ${dia}/${mes}/${ano}
+                    ${dia}/${meses[mes-1]}/${ano}
                 </td>
                 <td width="39%">
                     R$ ${"{{object.valor_prestacao}}"}
