--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -72,6 +72,12 @@
         <div class="row" >
             <div class="col-sm-6">                    
                 <div class="form-group" >                
+                    <label for="" class="required" >{{form.razao_social.label}} </label>        
+                    {% render_field form.razao_social class="form-control" %}
+                </div>
+            </div>        
+            <div class="col-sm-6">                    
+                <div class="form-group" >                
                     <label for="" class="required" >{{form.nome_fantasia.label}} </label>        
                     {% render_field form.nome_fantasia class="form-control" %}
                 </div>
