Cor e borda inserida em promissoria

--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -96,9 +96,10 @@
     .body {
         border: 1px solid black;        
         margin-bottom: 10px;  
-        background-color: lightblue;
+        background-color: lightyellow;
         padding: 5px 0px 20px 0px;
         font-family: "Arial";
+        border-radius: 25px;
     }
     .ait{               
         margin-top: 10px;
