contrato cnpj adicionado para editar

--- a/projeto/emprestimo/templates/emprestimo_contrato_sem_fiador.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato_sem_fiador.html
@@ -80,9 +80,9 @@
            
         </div>
     </div>  
-        <p class="desloca1">
-            1/1 
-        </p>
+    <p class="desloca1">
+        1/1 
+    </p>
         
 
     
@@ -146,6 +146,7 @@ window.onload = function imprimir(){
    
     contrato.innerHTML +=
     `
+        olá
         <h2> CONTRATO DE MÚTUO </h2>
         <p class="fontmenor" >Pelo presente contrato particular de empréstimo de dinheiro,de um lado, Josimério de Abreu Silva, (Brasileiro, Solteiro, RG 1.791.746 SSP RN, CPF 029.388.274-66), 
         de ora em diante denominado simplesmente por CREDOR, e, de outro lado, ${cliente_nome}
