--- a/projeto/cliente_cnpj/templates/cliente_cnpj_detail.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_detail.html
@@ -6,7 +6,16 @@
 <div class="row">       
     <div class="col-sm-6"> 
         <div class="form-group">
+            <input  value="{{ object.razao_social }}" readonly class="form-control">
+        </div>
+    </div><div class="col-sm-6"> 
+        <div class="form-group">
             <input  value="{{ object.nome_fantasia }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <input type="text" value="{{ object.cnpj }}" readonly class="form-control">
         </div>
     </div>
     <div class="col-sm-6"> 
@@ -32,6 +41,11 @@
     <div class="col-sm-6"> 
         <div class="form-group">
             <input type="text" value="{{ object.email }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <input type="text" value="{{ object.representante }}" readonly class="form-control">
         </div>
     </div>
 </div>
